--- a/E_AND_E_Service_Center/src/main/resources/view/LogInForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/LogInForm.fxml
@@ -28,12 +28,12 @@
                   <Font name="Bell MT Bold" size="28.0" />
                </font>
             </Label>
-            <JFXPasswordField layoutX="180.0" layoutY="137.0" prefHeight="51.0" prefWidth="348.0">
+            <JFXPasswordField fx:id="txtPassword" layoutX="180.0" layoutY="137.0" prefHeight="51.0" prefWidth="348.0" promptText="Enter Password">
                <font>
                   <Font size="20.0" />
                </font>
             </JFXPasswordField>
-            <JFXTextField layoutX="178.0" layoutY="25.0" prefHeight="42.0" prefWidth="348.0">
+            <JFXTextField fx:id="txtEmail" layoutX="178.0" layoutY="25.0" prefHeight="42.0" prefWidth="348.0" promptText="Enter Emali address">
                <font>
                   <Font size="20.0" />
                </font>
@@ -48,7 +48,7 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="184.0" layoutY="329.0" onAction="#createAccountButtonOnAction" prefHeight="43.0" prefWidth="214.0" style="-fx-background-color: #24c215;" text="Create New Account" textFill="WHITE">
+            <JFXButton layoutX="184.0" layoutY="329.0" onAction="#accountFormButtonOnAction" prefHeight="43.0" prefWidth="214.0" style="-fx-background-color: #24c215;" text="Create New Account" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="19.0" />
                </font>
@@ -70,7 +70,7 @@
             <Font size="88.0" />
          </font>
       </Label>
-      <Label layoutX="29.0" layoutY="490.0" text="Service Center" textFill="#2b2b6d">
+      <Label layoutX="39.0" layoutY="503.0" text="Service Center" textFill="#2b2b6d">
          <font>
             <Font name="System Bold Italic" size="40.0" />
          </font>
