--- a/E_AND_E_Service_Center/src/main/resources/view/PasswordForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/PasswordForm.fxml
@@ -1,14 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.PasswordFormController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="658.0" prefWidth="884.0" style="-fx-background-color: #d3d3d3;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PasswordFormController">
+   <children>
+      <Pane layoutX="154.0" layoutY="214.0" prefHeight="326.0" prefWidth="637.0" style="-fx-background-color: white;">
+         <children>
+            <JFXTextField fx:id="txtEmail" layoutX="64.0" layoutY="41.0" prefHeight="50.0" prefWidth="444.0" promptText="Enter your Email address">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </JFXTextField>
+            <JFXButton layoutX="382.0" layoutY="119.0" onAction="#sendOTPButtonOnAction" prefHeight="38.0" prefWidth="128.0" style="-fx-background-color: #2fa5e5;" text="Send OTP" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXTextField fx:id="txtOTP" layoutX="64.0" layoutY="175.0" prefHeight="50.0" prefWidth="444.0" promptText="Enter the received OTP code *">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </JFXTextField>
+            <JFXButton layoutX="382.0" layoutY="243.0" onAction="#checkOTPButtonOnAction" prefHeight="38.0" prefWidth="128.0" style="-fx-background-color: #2fa5e5;" text="Proceed" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </Pane>
+      <Text fill="#5c1863" layoutX="29.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Find Your Account &gt;&gt;&gt;">
+         <font>
+            <Font name="System Bold Italic" size="26.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="128.0" fitWidth="262.0" layoutX="311.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/logoIcon.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="19.0" layoutY="637.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* Please get the OTP code sent to your email after submitting your registration email and enter the OTP code here." textAlignment="CENTER" wrappingWidth="845.9999999999999">
+         <font>
+            <Font name="System Italic" size="17.0" />
+         </font>
+      </Text>
+      <JFXButton layoutX="629.0" layoutY="552.0" onAction="#backLogInButtonOnAction" prefHeight="40.0" prefWidth="162.0" style="-fx-background-color: #35ad5c;" text="Back To Log In" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </JFXButton>
+   </children>
 </AnchorPane>
