--- a/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
@@ -1,14 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.SingUpFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="636.0" prefWidth="884.0" style="-fx-background-color: #d3d3d3;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SingUpFormController">
+   <children>
+      <ImageView fitHeight="128.0" fitWidth="262.0" layoutX="321.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/logoIcon.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="21.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&gt;&gt;&gt; Admin Only &lt;&lt;&lt;">
+         <font>
+            <Font name="System Italic" size="21.0" />
+         </font>
+      </Text>
+      <Pane layoutX="182.0" layoutY="164.0" prefHeight="401.0" prefWidth="558.0" style="-fx-background-color: #abb8c3;">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <children>
+            <JFXPasswordField fx:id="txtCreatePassword" layoutX="57.0" layoutY="143.0" prefHeight="51.0" prefWidth="444.0" promptText="Enter Password *">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </JFXPasswordField>
+            <JFXTextField fx:id="txtCreateEmail" layoutX="57.0" layoutY="37.0" prefHeight="43.0" prefWidth="444.0" promptText="Enter Emali address">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </JFXTextField>
+            <JFXButton layoutX="312.0" layoutY="212.0" onAction="#createAccountButtonOnAction" prefHeight="43.0" prefWidth="214.0" style="-fx-background-color: #24c215;" text="Create Account" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </JFXButton>
+            <Text layoutX="18.0" layoutY="323.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* (8 characters or more, which includes numbers, letters, and symbols)">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
+      <Label layoutX="298.0" layoutY="605.0" text="High Quality Service &gt;&gt;&gt; connect with experts" textFill="#303271">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
