--- a/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="636.0" prefWidth="884.0" style="-fx-background-color: #d3d3d3;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SingUpFormController">
+<AnchorPane prefHeight="636.0" prefWidth="884.0" style="-fx-background-color: #888888;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SingUpFormController">
    <children>
       <ImageView fitHeight="128.0" fitWidth="262.0" layoutX="321.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -25,27 +24,32 @@
             <Font name="System Italic" size="21.0" />
          </font>
       </Text>
-      <Pane layoutX="182.0" layoutY="164.0" prefHeight="401.0" prefWidth="558.0" style="-fx-background-color: #abb8c3;">
+      <Pane layoutX="243.0" layoutY="164.0" prefHeight="401.0" prefWidth="558.0" style="-fx-background-color: #3a9eb7;">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
          <children>
-            <JFXPasswordField fx:id="txtCreatePassword" layoutX="57.0" layoutY="143.0" prefHeight="51.0" prefWidth="444.0" promptText="Enter Password *">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </JFXPasswordField>
             <JFXTextField fx:id="txtCreateEmail" layoutX="57.0" layoutY="37.0" prefHeight="43.0" prefWidth="444.0" promptText="Enter Emali address">
                <font>
                   <Font size="20.0" />
                </font>
             </JFXTextField>
-            <JFXButton layoutX="312.0" layoutY="212.0" onAction="#createAccountButtonOnAction" prefHeight="43.0" prefWidth="214.0" style="-fx-background-color: #24c215;" text="Create Account" textFill="WHITE">
+            <JFXPasswordField fx:id="txtCreatePassword" layoutX="58.0" layoutY="117.0" prefHeight="51.0" prefWidth="444.0" promptText="Enter Password *">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </JFXPasswordField>
+            <JFXPasswordField fx:id="txtSecurityCode" layoutX="53.0" layoutY="202.0" prefHeight="51.0" prefWidth="444.0" promptText="Enter security code">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </JFXPasswordField>
+            <JFXButton layoutX="290.0" layoutY="278.0" onAction="#createAccountButtonOnAction" prefHeight="43.0" prefWidth="214.0" style="-fx-background-color: #24c215;" text="Create Account" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="19.0" />
                </font>
             </JFXButton>
-            <Text layoutX="18.0" layoutY="323.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* (8 characters or more, which includes numbers, letters, and symbols)">
+            <Text layoutX="18.0" layoutY="384.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* (8 characters or more, which includes numbers, letters, and symbols)">
                <font>
                   <Font size="17.0" />
                </font>
@@ -57,5 +61,10 @@
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
+      <Text fill="#3c1a8c" layoutX="23.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create New Account &gt;" underline="true" wrappingWidth="281.6029357910156">
+         <font>
+            <Font name="Tahoma Bold" size="33.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
