--- a/E_AND_E_Service_Center/src/main/resources/view/PasswordForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/PasswordForm.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="658.0" prefWidth="884.0" style="-fx-background-color: #d3d3d3;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PasswordFormController">
+<AnchorPane prefHeight="658.0" prefWidth="884.0" style="-fx-background-color: #d3d3d3;" stylesheets="@../CssStyleSheet/PasswordFormStyle.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PasswordFormController">
    <children>
       <Pane layoutX="154.0" layoutY="214.0" prefHeight="326.0" prefWidth="637.0" style="-fx-background-color: white;">
          <children>
@@ -35,17 +35,17 @@
             </JFXButton>
          </children>
       </Pane>
-      <Text fill="#5c1863" layoutX="29.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Find Your Account &gt;&gt;&gt;">
+      <Text fill="WHITE" layoutX="26.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Find Your Account &gt;&gt;&gt;">
          <font>
             <Font name="System Bold Italic" size="26.0" />
          </font>
       </Text>
-      <ImageView fitHeight="128.0" fitWidth="262.0" layoutX="311.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="128.0" fitWidth="262.0" layoutX="530.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/logoIcon.png" />
          </image>
       </ImageView>
-      <Text layoutX="19.0" layoutY="637.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* Please get the OTP code sent to your email after submitting your registration email and enter the OTP code here." textAlignment="CENTER" wrappingWidth="845.9999999999999">
+      <Text fill="WHITE" layoutX="19.0" layoutY="637.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* Please get the OTP code sent to your email after submitting your registration email and enter the OTP code here." textAlignment="CENTER" wrappingWidth="845.9999999999999">
          <font>
             <Font name="System Italic" size="17.0" />
          </font>
