--- a/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
@@ -24,7 +24,7 @@
             <Font name="System Italic" size="21.0" />
          </font>
       </Text>
-      <Pane layoutX="243.0" layoutY="164.0" prefHeight="401.0" prefWidth="558.0" style="-fx-background-color: #3a9eb7;">
+      <Pane layoutX="243.0" layoutY="164.0" prefHeight="401.0" prefWidth="558.0" style="-fx-background-color: #7aafe9;">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
