--- a/E_AND_E_Service_Center/src/main/resources/view/changePwForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/changePwForm.fxml
@@ -9,10 +9,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="610.0" prefWidth="884.0" style="-fx-background-color: #d3d3d3;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ChangePwFormController">
+<AnchorPane prefHeight="610.0" prefWidth="884.0" style="-fx-background-color: #d3d3d3;" stylesheets="@../CssStyleSheet/ChangePwFormStyle.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ChangePwFormController">
    <children>
-      <Pane layoutX="164.0" layoutY="224.0" prefHeight="326.0" prefWidth="637.0" style="-fx-background-color: white;">
+      <Pane layoutX="123.0" layoutY="224.0" prefHeight="326.0" prefWidth="637.0" style="-fx-background-color: white;">
          <children>
             <JFXTextField fx:id="txtNewPassword" layoutX="64.0" layoutY="41.0" prefHeight="50.0" prefWidth="444.0" promptText="Enter your new password">
                <font>
@@ -31,17 +30,17 @@
             </JFXButton>
          </children>
       </Pane>
-      <Text fill="#5c1863" layoutX="39.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reset Password &gt;&gt;&gt;">
+      <Text fill="#5b6cd9" layoutX="14.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reset Password &gt;&gt;&gt;">
          <font>
             <Font name="System Bold Italic" size="26.0" />
          </font>
       </Text>
-      <ImageView fitHeight="128.0" fitWidth="262.0" layoutX="321.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="128.0" fitWidth="262.0" layoutX="311.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/logoIcon.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="639.0" layoutY="556.0" onAction="#backLogInButtonOnAction" prefHeight="40.0" prefWidth="162.0" style="-fx-background-color: #35ad5c;" text="Back To Log In" textFill="WHITE">
+      <JFXButton layoutX="598.0" layoutY="556.0" onAction="#backLogInButtonOnAction" prefHeight="40.0" prefWidth="162.0" style="-fx-background-color: #35ad5c;" text="Back To Log In" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
