--- a/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="636.0" prefWidth="884.0" style="-fx-background-color: #888888;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SingUpFormController">
+<AnchorPane fx:id="paneSingUp" prefHeight="636.0" prefWidth="884.0" style="-fx-background-color: #888888;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SingUpFormController">
    <children>
       <ImageView fitHeight="128.0" fitWidth="262.0" layoutX="321.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
          <image>
