--- a/E_AND_E_Service_Center/src/main/resources/view/PasswordForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/PasswordForm.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="658.0" prefWidth="884.0" style="-fx-background-color: #d3d3d3;" stylesheets="@../CssStyleSheet/PasswordFormStyle.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PasswordFormController">
+<AnchorPane fx:id="panePswrd" prefHeight="658.0" prefWidth="884.0" style="-fx-background-color: #d3d3d3;" stylesheets="@../CssStyleSheet/PasswordFormStyle.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PasswordFormController">
    <children>
       <Pane layoutX="154.0" layoutY="214.0" prefHeight="326.0" prefWidth="637.0" style="-fx-background-color: white;">
          <children>
