--- a/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
@@ -24,7 +24,7 @@
             <Font name="System Italic" size="21.0" />
          </font>
       </Text>
-      <Pane layoutX="243.0" layoutY="164.0" prefHeight="401.0" prefWidth="558.0" style="-fx-background-color: #7aafe9;">
+      <Pane layoutX="243.0" layoutY="164.0" prefHeight="424.0" prefWidth="558.0" style="-fx-background-color: #7aafe9;">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -49,11 +49,16 @@
                   <Font name="System Bold" size="19.0" />
                </font>
             </JFXButton>
-            <Text layoutX="18.0" layoutY="384.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* (8 characters or more, which includes numbers, letters, and symbols)">
+            <Text layoutX="18.0" layoutY="410.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* (8 characters or more, which includes numbers, letters, and symbols)">
                <font>
                   <Font size="17.0" />
                </font>
             </Text>
+            <JFXButton alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="264.0" layoutY="334.0" onAction="#logInAccountButtonOnAction" prefHeight="29.0" prefWidth="240.0" text="Already have a account : Log In" textAlignment="RIGHT" textFill="#16414b">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </JFXButton>
          </children>
       </Pane>
       <Label layoutX="298.0" layoutY="605.0" text="High Quality Service &gt;&gt;&gt; connect with experts" textFill="#303271">
