--- a/E_AND_E_Service_Center/src/main/resources/view/DashboardForAdminForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/DashboardForAdminForm.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="637.0" prefWidth="792.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardForAdminFormController">
+<AnchorPane fx:id="paneAdmin" prefHeight="637.0" prefWidth="792.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardForAdminFormController">
     <children>
         <ImageView fitHeight="638.0" fitWidth="801.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -19,29 +19,44 @@
                 <Font name="LKSinhala_nm normal" size="64.0" />
             </font>
         </Label>
-        <JFXButton layoutX="90.0" layoutY="120.0" onAction="#btnCustomerOnAction" text="Customer" textAlignment="CENTER" textFill="#7fff73">
+        <JFXButton layoutX="90.0" layoutY="120.0" onAction="#customerBtnOnAction" text="Customer" textAlignment="CENTER" textFill="#7fff73">
             <font>
                 <Font name="System Bold" size="30.0" />
             </font>
         </JFXButton>
-        <JFXButton layoutX="98.0" layoutY="174.0" onAction="#btnItemOnAction" prefHeight="57.0" prefWidth="159.0" text="Item" textAlignment="CENTER" textFill="#5bf4ff">
+        <JFXButton layoutX="98.0" layoutY="174.0" onAction="#itemBtnOnAction" prefHeight="57.0" prefWidth="159.0" text="Item" textAlignment="CENTER" textFill="#5bf4ff">
             <font>
                 <Font name="System Bold" size="30.0" />
             </font>
         </JFXButton>
-        <JFXButton layoutX="98.0" layoutY="237.0" onAction="#btnStatusOnAction" prefHeight="57.0" prefWidth="159.0" text="Status" textAlignment="CENTER" textFill="#efa5ff">
+        <JFXButton layoutX="98.0" layoutY="237.0" onAction="#statusBtnOnAction" prefHeight="57.0" prefWidth="159.0" text="Status" textAlignment="CENTER" textFill="#efa5ff">
             <font>
                 <Font name="System Bold" size="30.0" />
             </font>
         </JFXButton>
-        <JFXButton layoutX="50.0" layoutY="382.0" onAction="#btnPlaceOrderOnAction" prefHeight="78.0" prefWidth="262.0" text="Place Order" textAlignment="CENTER" textFill="#ffd900">
+        <JFXButton layoutX="50.0" layoutY="382.0" onAction="#placeOrderBtnOnAction" prefHeight="78.0" prefWidth="262.0" text="Place Order" textAlignment="CENTER" textFill="#ffd900">
             <font>
                 <Font name="System Bold" size="36.0" />
             </font>
         </JFXButton>
-      <JFXButton layoutX="98.0" layoutY="298.0" onAction="#btnReportOnAction" prefHeight="57.0" prefWidth="159.0" text="Report" textAlignment="CENTER" textFill="#6164ff">
+      <JFXButton layoutX="98.0" layoutY="298.0" onAction="#reportBtnOnAction" prefHeight="57.0" prefWidth="159.0" text="Report" textAlignment="CENTER" textFill="#6164ff">
          <font>
             <Font name="System Bold" size="30.0" />
+         </font>
+      </JFXButton>
+        <Label fx:id="lblDate" alignment="CENTER" layoutX="14.0" layoutY="571.0" prefHeight="51.0" prefWidth="199.0" textAlignment="CENTER" textFill="WHITE">
+            <font>
+                <Font name="System Bold Italic" size="27.0" />
+            </font>
+        </Label>
+        <Label fx:id="lblTime" alignment="CENTER" layoutX="567.0" layoutY="570.0" prefHeight="51.0" prefWidth="199.0" textAlignment="CENTER" textFill="WHITE">
+            <font>
+                <Font name="System Bold Italic" size="27.0" />
+            </font>
+        </Label>
+      <JFXButton layoutX="656.0" layoutY="382.0" onAction="#logOutBtnOnAction" prefHeight="33.0" prefWidth="111.0" style="-fx-background-color: red;" text="Log Out" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="21.0" />
          </font>
       </JFXButton>
     </children>
