--- a/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
+++ b/E_AND_E_Service_Center/src/main/resources/view/SingUpForm.fxml
@@ -61,9 +61,9 @@
                   <Font size="17.0" />
                </font>
             </Text>
-            <JFXButton alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="264.0" layoutY="334.0" onAction="#logInAccountButtonOnAction" prefHeight="29.0" prefWidth="240.0" text="Already have a account : Log In" textAlignment="RIGHT" textFill="#16414b">
+            <JFXButton alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="242.0" layoutY="334.0" onAction="#logInAccountButtonOnAction" prefHeight="34.0" prefWidth="262.0" text="Already have a account : Log In" textAlignment="CENTER" textFill="#16414b">
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="15.0" />
                </font>
             </JFXButton>
          </children>
